--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+            <h1 class="namecompane">Цветочный</h1>
+            <div class="razdels">
+                <h2 class="namerazdels">Главная</h2>
+                <h2 class="namerazdels">Заказы</h2>
+                <h2 class="namerazdels">Избраное</h2>
+                <h2 class="namerazdels">Корзина</h2>   
+            </div>
+    </header>
 </body>
 </html>
